# mapchete

./: .gitignore  README.md  execute.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: demo.py
mapchete/: __init__.py  basechete.py  core.py  farmchete.py  mapchete.py  maxchete.py  randchete.py  seqchete.py  strategies.py
mapchete/merge/: __init__.py
mapchete/utils/: merge_tiffs.py  raster_clip.py  utils.py
tests/: conftest.py  test_algorithms.py  test_core.py  test_demo.py  test_merge_tiffs.py  test_strategies.py
